to-do implement and origin the files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="search-container flex align-center">
             <input type="search" placeholder="Enter location">
             <button class="serach-btn">Go</button>
-            <button class="serach-btn">My Location</button>
+            <button class="my-location-btn">My Location</button>
         </div>
     </header>
 
@@ -32,7 +32,7 @@
     <button class="btn">Click Me</button>
 </main>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/mapController.js"></script>
 </body>
 
 </html>
