add id name and save btn-hilla

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     </header>
 
 <main>
-
+    <div hidden class="modal">
+        <label class="input-location" for="location-name">Insert location:</label>
+        <input type="name" class="location-name" placeholder="Insert name" />
+        <button class="btn-save">Save</button>
+    </div>
+    
     <h2 class="location-viewer">Location</h2>
     <button class="copy-btn">Copy Location</button>
 
