--- a/index.html
+++ b/index.html
@@ -8,32 +8,35 @@
     <title>ES6</title>
 </head>
 
-<body>
+<body class="flex column space-between">
 
-    <header class="flex space-between">
-        <h1>TravelTip</h1>
-        <div class="search-container flex align-center">
-            <input type="search" placeholder="Enter location">
-            <button class="serach-btn">Go</button>
-            <button class="my-location-btn">My Location</button>
+    <header class="flex justify-center">
+        <div class="header-container flex space-between container">
+            <h1 class="logo">Travel<span>Tip</span> </h1>
+            <div class="search-container flex align-center">
+                <input type="search" placeholder="Enter location">
+                <button class="serach-btn">Go</button>
+                <button class="my-location-btn">My Location</button>
+            </div>
         </div>
     </header>
 
-    <main>
-        <div hidden class="modal">
-            <label class="input-location" for="location-name">Insert location:</label>
-            <input type="name" class="location-name" placeholder="Insert name" />
-            <button class="btn-save">Save</button>
-        </div>
+    <main class="flex justify-center align-center">
+        <div class="main-container container">
+            <div hidden class="modal">
+                <label class="input-location" for="location-name">Insert location:</label>
+                <input type="name" class="location-name" placeholder="Insert name" />
+                <button class="btn-save">Save</button>
+            </div>
 
-        <h2 class="location-viewer">Location</h2>
-        <button class="copy-btn">Copy Location</button>
+            <h2 class="location-viewer">Location</h2>
+            <button class="copy-btn">Copy Location</button>
 
-        <div class="travel-details">
-            <div class="weather"> Weather</div>
-            <div class="locations-container">Locations
-                <table>
-                    <thead>
+            <div class="travel-details">
+                <div class="weather"> Weather</div>
+                <div class="locations-container">Locations
+                    <table>
+                        <thead>
                             <tr>
                                 <th>#</th>
                                 <th>Name</th>
@@ -41,17 +44,23 @@
                                 <!-- <th>Longitude</th> -->
                                 <th>Actions</th>
                             </tr>
-                    </thead>
-                    <tbody>
-                        <!-- js render -->
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            <!-- js render -->
+                        </tbody>
+                    </table>
 
+                </div>
+                <div class="map" id="map" style="width: 100%; height: 400px;"></div>
             </div>
-            <div class="map" id="map" style="width: 100%; height: 400px;"></div>
+            <button class="btn">Click Me</button>
         </div>
-        <button class="btn">Click Me</button>
     </main>
+
+    <footer class="main-container flex justify-center align-center column">
+        <h2 class="logo">Travel<span>Tip</span></h2>
+        <small>coffee rights 2020</small>
+    </footer>
 
     <script type="module" src="js/mapController.js"></script>
 </body>
