--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="flex space-between">
         <h1>TravelTip</h1>
         <div class="search-container flex align-center">
-            <input type="search" placeholder="Enter location">
-            <button class="serach-btn">Go</button>
+            <input class="my-search" type="search" placeholder="Enter location">
+            <button class="search-btn">Go</button>
             <button class="my-location-btn">My Location</button>
         </div>
     </header>
@@ -52,7 +52,7 @@
         </div>
         <button class="btn">Click Me</button>
     </main>
-
+    <script src="lib/axios.js"></script>
     <script type="module" src="js/mapController.js"></script>
 </body>
 
