--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1ed641f7ad.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/style.css">
     <title>ES6</title>
 </head>
@@ -33,7 +35,7 @@
                 <button class="copy-btn">Copy Location</button>
             </div>
             <div class="travel-details">
-                <div class="weather"> Weather </div>
+                <div class="weather"> Weather</div>
                 <div class="locations-container">Locations
                     <table>
                         <thead>
@@ -43,7 +45,7 @@
                                 <th>Position</th>
                                 <!-- <th>Longitude</th> -->
                                 <th>Actions</th>
-                                <th>Actions</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -58,7 +60,7 @@
         </div>
     </main>
     
-    <footer class="main-container flex justify-center align-center column">
+    <footer class="main-footer flex justify-center align-center column">
         <h2 class="logo">Travel<span>Tip</span></h2>
         <small>coffee rights 2020</small>
     </footer>
