--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <th>Position</th>
                                 <!-- <th>Longitude</th> -->
                                 <th>Actions</th>
-                                <th>Actions</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -58,7 +58,7 @@
         </div>
     </main>
     
-    <footer class="main-container flex justify-center align-center column">
+    <footer class="main-footer flex justify-center align-center column">
         <h2 class="logo">Travel<span>Tip</span></h2>
         <small>coffee rights 2020</small>
     </footer>
